[package]
name = "void_asset"
version.workspace = true
edition.workspace = true
description = "Hot-reloadable asset system"

[features]
default = ["std", "hot-reload"]
std = []
hot-reload = ["notify"]

[dependencies]
void_core = { workspace = true }
void_structures = { workspace = true }
notify = { workspace = true, optional = true }
parking_lot = { workspace = true }
