[package]
name = "void_audio"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Audio system for Void Engine using rodio"

[dependencies]
void_core = { workspace = true }
serde = { workspace = true }
parking_lot = { workspace = true }
rodio = { version = "0.19", default-features = false, features = ["wav", "mp3", "vorbis"] }

[dev-dependencies]
