[package]
name = "void_compositor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Wayland compositor for Metaverse OS using Smithay"

[dependencies]
# Internal crates
void_core = { path = "../void_core" }

# Utilities
parking_lot = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
serde = { workspace = true }

# Graphics
glam = { workspace = true }

# Linux-only dependencies
[target.'cfg(target_os = "linux")'.dependencies]
# Calloop event loop - use version compatible with Smithay 0.3
calloop = "0.9"

# Smithay - Wayland compositor library (Linux only, optional for musl builds)
smithay = { version = "0.3", default-features = false, optional = true, features = [
    "backend_drm",
    "backend_gbm",
    "backend_egl",
    "backend_libinput",
    "backend_udev",
    "backend_session_libseat",
    "renderer_gl",
    "wayland_frontend",
    "use_system_lib",
] }

# DRM bindings (for direct access to DRM types)
drm = { version = "0.5", optional = true }

# Input library bindings
input = { version = "0.6", optional = true }

# Logging for Smithay
slog = { version = "2.8", optional = true }
slog-stdlog = { version = "4.1", optional = true }

[features]
default = []
# Full Smithay compositor (requires glibc, not for musl)
smithay-compositor = ["smithay", "drm", "input", "slog", "slog-stdlog"]
# XWayland support for X11 apps
xwayland = ["smithay-compositor", "smithay/xwayland"]

[dev-dependencies]
env_logger = { workspace = true }
